# haskell-hedgehog

./: .appveyor.yml  .gitignore  .travis.yml  CHANGELOG.md  Makefile  README.md  STYLE_GUIDE.md  bors.toml  cabal.project  hedgehog.cabal  stack.yaml
.github/workflows/: ci.yaml  haskell-ci.yml  release.yml
hedgehog/: Makefile  cabal.project  hedgehog.cabal
hedgehog-corpus/: LICENSE  README.md  hedgehog-corpus.cabal
hedgehog-corpus/src/Hedgehog/: Corpus.hs
hedgehog-dieharder/: LICENSE  hedgehog-dieharder.cabal
hedgehog-dieharder/test/: Dieharder.hs
hedgehog-example/: Makefile  hedgehog-example.cabal
hedgehog-example/src/Test/Example/: Basic.hs  Confidence.hs  Coverage.hs  EvalNF.hs  List.hs  QuasiShow.hs  QuickCheck.hs  References.hs  Registry.hs  Resource.hs  STLC.hs  Shrink.hs
hedgehog-example/test/: test.hs
hedgehog-example/test/Test/Example/: Basic.hs  Exception.hs  References.hs  Registry.hs  Resource.hs  Roundtrip.hs  STLC.hs
hedgehog-quickcheck/: CHANGELOG.md  LICENSE  Makefile  README.md  hedgehog-quickcheck.cabal
hedgehog-quickcheck/src/Test/QuickCheck/: Hedgehog.hs
hedgehog-test-laws/: hedgehog-test-laws.cabal
hedgehog-test-laws/test/: test.hs
hedgehog/src/: Hedgehog.hs
hedgehog/src/Hedgehog/: Gen.hs  Main.hs  Property.hs  Range.hs  Runner.hs  TH.hs
hedgehog/src/Hedgehog/Internal/: Barbie.hs  Check.hs  Config.hs  Discovery.hs  Distributive.hs  Exception.hs  Gen.hs  HTraversable.hs  Opaque.hs  Predicate.hs  Prelude.hs  Property.hs  Queue.hs  Range.hs  Region.hs  Report.hs  Runner.hs  Seed.hs  Show.hs  Shrink.hs  Source.hs  State.hs  TH.hs  TestCount.hs  Tree.hs  Tripping.hs
hedgehog/src/Hedgehog/Internal/State/: Name.hs
hedgehog/src/Hedgehog/Internal/State/Name/: Map.hs
hedgehog/test/: Text.hs  test.hs
hedgehog/test/Test/Hedgehog/: Applicative.hs  Classified.hs  Confidence.hs  Discovery.hs  Filter.hs  Maybe.hs  Range.hs  Seed.hs  Shrink.hs  Size.hs  Skip.hs  State.hs  Text.hs  Zip.hs
site/: index.html
src/Hedgehog/: Example.hs  Gen.hs  Property.hs  Runner.hs
src/Hedgehog/Internal/: Discovery.hs  Report.hs  Seed.hs  Shrink.hs  Source.hs  Tree.hs
tasty-hedgehog/: tasty-hedgehog.cabal
tasty-hedgehog/src/Test/Tasty/: Hedgehog.hs
test/: test.hs
