name:
  hedgehog
version:
  0
license:
  BSD3
author:
  Jacob Stanley
maintainer:
  Jacob Stanley <jacob@stanley.io>
homepage:
  https://github.com/hedgehogqa/haskell-hedgehog
bug-reports:
  https://github.com/hedgehogqa/haskell-hedgehog/issues
synopsis:
  Hedgehog will eat all your bugs.
description:
  Hedgehog will eat all your bugs.
category:
  Testing
license:
  BSD3
license-file:
  LICENSE
cabal-version:
  >= 1.8
build-type:
  Simple

source-repository head
  type: git
  location: git://github.com/hedgehogqa/haskell-hedgehog.git

library
  build-depends:
      base                            >= 3          && < 5
    , ansi-terminal                   >= 0.6        && < 0.7
    , bytestring                      >= 0.10       && < 0.11
    , containers                      >= 0.4        && < 0.6
    , mmorph                          >= 1.0        && < 1.1
    , pretty-show                     >= 1.6        && < 1.7
    , random                          >= 1.1        && < 1.2
    , template-haskell                >= 2.10       && < 2.12
    , text                            >= 1.1        && < 1.3
    , time                            >= 1.4        && < 1.9
    , transformers                    >= 0.3        && < 0.6
    , wl-pprint-annotated             >= 0.0        && < 0.1

  if impl(ghc < 8.0)
    build-depends:
      semigroups                      >= 0.16       && < 0.19

  ghc-options:
    -Wall

  hs-source-dirs:
    src

  exposed-modules:
    Hedgehog.Example
    Hedgehog.Gen
    Hedgehog.Property
    Hedgehog.Range
    Hedgehog.Runner
    Hedgehog.TH

    Hedgehog.Internal.Discovery
    Hedgehog.Internal.Report
    Hedgehog.Internal.Seed
    Hedgehog.Internal.Shrink
    Hedgehog.Internal.Tree

test-suite test
  type:
    exitcode-stdio-1.0

  main-is:
    test.hs

  ghc-options:
    -Wall -threaded -O2

  hs-source-dirs:
    test

  build-depends:
      hedgehog
    , base                            >= 3          && < 5
    , containers                      >= 0.4        && < 0.6
    , pretty-show                     >= 1.6        && < 1.7
    , text                            >= 1.1        && < 1.3
    , transformers                    >= 0.3        && < 0.6

  if impl(ghc < 8.0)
    build-depends:
      semigroups                      >= 0.16       && < 0.19
