version: 0.2.0

name:
  hedgehog-corpus
author:
  Tim McGilchrist <timmcgil@gmail.com>
maintainer:
  Jacob Stanley <jacob@stanley.io>
homepage:
  https://github.com/hedgehogqa/haskell-hedgehog/tree/master/hedgehog-corpus
bug-reports:
  https://github.com/hedgehogqa/haskell-hedgehog/issues
synopsis:
  hedgehog-corpus
description:
  Collections of strings for testing things, when you need some sensible human
  readable strings for property testing.
  .
  To get started quickly, see the <https://github.com/hedgehogqa/haskell-hedgehog/blob/master/hedgehog-corpus/README.md>.
category:
  Testing
license:
  BSD3
license-file:
  LICENSE
cabal-version:
  >= 1.8
build-type:
  Simple
tested-with:
    GHC == 8.2.2
  , GHC == 8.4.4
  , GHC == 8.6.5
  , GHC == 8.8.3
  , GHC == 8.10.1
  , GHC == 9.0.2
  , GHC == 9.2.7
  , GHC == 9.4.8
  , GHC == 9.6.6
  , GHC == 9.8.4
  , GHC == 9.10.1
  , GHC == 9.12.1

extra-source-files:
  README.md

source-repository head
  type: git
  location: https://github.com/hedgehogqa/haskell-hedgehog

library
  build-depends:
      base                            >= 3          && < 5

  ghc-options:
    -Wall

  hs-source-dirs:
    src

  exposed-modules:
    Hedgehog.Corpus
