name:
  hedgehog-example
version:
  0
license:
  BSD3
author:
  Jacob Stanley
maintainer:
  Jacob Stanley <jacob@stanley.io>
homepage:
  https://github.com/hedgehogqa/haskell-hedgehog
synopsis:
  Hedgehog example project.
description:
  Hedgehog example project.
category:
  Testing
license:
  BSD3
license-file:
  LICENSE
cabal-version:
  >= 1.8
build-type:
  Simple

library

test-suite test
  type:
    exitcode-stdio-1.0

  main-is:
    test.hs

  ghc-options:
    -Wall -threaded -O2

  hs-source-dirs:
    test

  build-depends:
      hedgehog
    , base                            >= 3          && < 5
    , containers                      >= 0.4        && < 0.6
    , filepath                        >= 1.3        && < 1.4
    , hashtables                      >= 1.2        && < 1.3
    , mmorph                          >= 1.0        && < 1.1
    , mtl                             >= 2.1        && < 2.3
    , parsec                          >= 3.1        && < 3.2
    , pretty-show                     >= 1.6        && < 1.7
    , process                         >= 1.2        && < 1.7
    , resourcet                       >= 1.1        && < 1.2
    , temporary-resourcet             >= 0.1        && < 0.2
    , text                            >= 1.1        && < 1.3
    , transformers                    >= 0.5        && < 0.6
