version: 0

name:
  hedgehog-example
author:
  Jacob Stanley
maintainer:
  Jacob Stanley <jacob@stanley.io>
homepage:
  https://github.com/hedgehogqa/haskell-hedgehog
synopsis:
  Hedgehog example project.
description:
  This is the hedgehog example project. It contains useful tests.
category:
  Testing
license:
  BSD3
license-file:
  LICENSE
cabal-version:
  >= 1.8
build-type:
  Simple
tested-with:
    GHC == 8.0.2
  , GHC == 8.2.2
  , GHC == 8.4.4
  , GHC == 8.6.5
  , GHC == 8.8.3
  , GHC == 8.10.1

library
  hs-source-dirs:
    src

  exposed-modules:
      Test.Example.Basic
    , Test.Example.Confidence
    , Test.Example.Coverage
    , Test.Example.EvalNF
    , Test.Example.Exception
    , Test.Example.List
    , Test.Example.QuasiShow
    , Test.Example.QuickCheck
    , Test.Example.References
    , Test.Example.Registry
    , Test.Example.Resource
    , Test.Example.Roundtrip
    , Test.Example.STLC

  build-depends:
      hedgehog
    , hedgehog-quickcheck
    , base                            >= 3          && < 5
    , barbies
    , containers                      >= 0.4        && < 0.8
    , directory                       >= 1.0        && < 1.4
    , filepath                        >= 1.3        && < 1.6
    , hashtables                      >= 1.2        && < 1.4
    , lifted-base                     >= 0.2        && < 0.3
    , mmorph                          >= 1.0        && < 1.3
    , mtl                             >= 2.1        && < 2.4
    , parsec                          >= 3.1        && < 3.2
    , pretty-show                     >= 1.6        && < 1.11
    , process                         >= 1.2        && < 1.7
    , QuickCheck                      >= 2.7        && < 2.16
    , resourcet                       >= 1.1        && < 1.4
    , template-haskell                >= 2.10       && < 2.23
    , temporary                       >= 1.3        && < 1.4
    , temporary-resourcet             >= 0.1        && < 0.2
    , text                            >= 1.1        && < 2.2
    , transformers                    >= 0.4        && < 0.7

test-suite test
  type:
    exitcode-stdio-1.0

  main-is:
    test.hs

  build-depends:
      hedgehog-example
    , hedgehog
    , hedgehog-quickcheck
    , base

  ghc-options:
    -Wall -threaded -O2

  hs-source-dirs:
    test
