version: 0.1

name:
  hedgehog-quickcheck
license:
  BSD3
author:
  Jacob Stanley
maintainer:
  Jacob Stanley <jacob@stanley.io>
homepage:
  https://hedgehog.qa
bug-reports:
  https://github.com/hedgehogqa/haskell-hedgehog/issues
synopsis:
  Use QuickCheck generators in Hedgehog and vice versa.
description:
  Use QuickCheck generators in Hedgehog and vice versa.
category:
  Testing
license:
  BSD3
license-file:
  LICENSE
cabal-version:
  >= 1.8
build-type:
  Simple
tested-with:
    GHC == 7.10.2
  , GHC == 7.10.3
  , GHC == 8.0.1
  , GHC == 8.0.2
extra-source-files:
  README.md
  CHANGELOG.md

source-repository head
  type: git
  location: git://github.com/hedgehogqa/haskell-hedgehog.git

library
  build-depends:
      base                            >= 3          && < 5
    , hedgehog                        >= 0.5        && < 0.6
    , QuickCheck                      >= 2.7        && < 2.11
    , transformers                    >= 0.4        && < 0.6

  ghc-options:
    -Wall

  hs-source-dirs:
    src

  exposed-modules:
    Hedgehog.Gen.QuickCheck

    Test.QuickCheck.Hedgehog
