version: 1.0.2

name:
  hedgehog
author:
  Jacob Stanley
maintainer:
  Jacob Stanley <jacob@stanley.io>
homepage:
  https://hedgehog.qa
bug-reports:
  https://github.com/hedgehogqa/haskell-hedgehog/issues
synopsis:
  Release with confidence.
description:
  <http://hedgehog.qa/ Hedgehog> automatically generates a comprehensive array
  of test cases, exercising your software in ways human testers would never
  imagine.
  .
  Generate hundreds of test cases automatically, exposing even the
  most insidious of corner cases. Failures are automatically simplified, giving
  developers coherent, intelligible error messages.
  .
  To get started quickly, see the <https://github.com/hedgehogqa/haskell-hedgehog/tree/master/hedgehog-example examples>.
category:
  Testing
license:
  BSD3
license-file:
  LICENSE
cabal-version:
  >= 1.8
build-type:
  Simple
tested-with:
    GHC == 8.0.2
  , GHC == 8.2.2
  , GHC == 8.4.4
  , GHC == 8.6.4
extra-source-files:
  README.md
  CHANGELOG.md

source-repository head
  type: git
  location: git://github.com/hedgehogqa/haskell-hedgehog.git

library
  build-depends:
   -- GHC 8.0.1 / base-4.9.0.0 (May 2016)
      base                            >= 4.9        && < 5
    , ansi-terminal                   >= 0.6        && < 0.11
    , async                           >= 2.0        && < 2.3
    , bytestring                      >= 0.10       && < 0.11
    , concurrent-output               >= 1.7        && < 1.11
    , containers                      >= 0.4        && < 0.7
    , directory                       >= 1.2        && < 1.4
    , erf                             >= 2.0        && < 2.1
    , exceptions                      >= 0.7        && < 0.11
    , fail                            >= 4.9        && < 5
    , lifted-async                    >= 0.7        && < 0.11
    , mmorph                          >= 1.0        && < 1.2
    , monad-control                   >= 1.0        && < 1.1
    , mtl                             >= 2.1        && < 2.3
    , pretty-show                     >= 1.6        && < 1.10
    , primitive                       >= 0.6        && < 0.8
    , random                          >= 1.1        && < 1.2
    , resourcet                       >= 1.1        && < 1.3
    , semigroups                      >= 0.16       && < 0.20
    , stm                             >= 2.4        && < 2.6
    , template-haskell                >= 2.10       && < 2.16
    , text                            >= 1.1        && < 1.3
    , time                            >= 1.4        && < 1.10
    , transformers                    >= 0.5        && < 0.6
    , transformers-base               >= 0.4.5.1    && < 0.5
    , wl-pprint-annotated             >= 0.0        && < 0.2

  ghc-options:
    -Wall

  if impl(ghc >= 8.0)
    ghc-options: -Wnoncanonical-monad-instances

  hs-source-dirs:
    src

  exposed-modules:
    Hedgehog
    Hedgehog.Gen
    Hedgehog.Main
    Hedgehog.Range

    Hedgehog.Internal.Config
    Hedgehog.Internal.Discovery
    Hedgehog.Internal.Distributive
    Hedgehog.Internal.Exception
    Hedgehog.Internal.Gen
    Hedgehog.Internal.HTraversable
    Hedgehog.Internal.Opaque
    Hedgehog.Internal.Property
    Hedgehog.Internal.Queue
    Hedgehog.Internal.Range
    Hedgehog.Internal.Region
    Hedgehog.Internal.Report
    Hedgehog.Internal.Runner
    Hedgehog.Internal.Seed
    Hedgehog.Internal.Show
    Hedgehog.Internal.Shrink
    Hedgehog.Internal.Source
    Hedgehog.Internal.State
    Hedgehog.Internal.TH
    Hedgehog.Internal.Tree
    Hedgehog.Internal.Tripping

test-suite test
  type:
    exitcode-stdio-1.0

  main-is:
    test.hs

  ghc-options:
    -Wall -threaded -O2

  hs-source-dirs:
    test

  other-modules:
    Test.Hedgehog.Applicative
    Test.Hedgehog.Confidence
    Test.Hedgehog.Filter
    Test.Hedgehog.Maybe
    Test.Hedgehog.Seed
    Test.Hedgehog.Text
    Test.Hedgehog.Zip

  build-depends:
      hedgehog
    , base                            >= 3          && < 5
    , containers                      >= 0.4        && < 0.7
    , mmorph                          >= 1.0        && < 1.2
    , mtl                             >= 2.1        && < 2.3
    , pretty-show                     >= 1.6        && < 1.10
    , semigroups                      >= 0.16       && < 0.20
    , text                            >= 1.1        && < 1.3
    , transformers                    >= 0.3        && < 0.6
